--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@ function setmypos()
 					{
 			//		if (tilef==1)	{document.getElementById("img_"+i+"-"+ii).src="file:///mnt/sdcard/locage/maps/"+mytile;	}
 					downtile(curmap, MyZoom, (xtile+curx), (ytile+cury), i, ii,1);
+					console.log("down tile, map "+curmap+", zoom: "+MyZoom+", X: "+ (xtile+curx)+", y: "+ (ytile+cury)+" i:"+i+" ii: "+ii);
 					}
 				else
 					{
@@ -715,6 +716,9 @@ function downtile(smap, szoom, A, B, i, ii, retry)
 		{tilelink="http://tile.stamen.com/toner/"+szoom+"/"+A+"/"+B+".png";			}	
 //alert("downloading: "+tilelink);
 	tilename=smap+"/"+szoom+"_"+A+"_"+B+".png";
+	console.log("tilename: "+tilename);
+	console.log("tilelink: "+tilelink);
+
 
 	window.requestFileSystem(LocalFileSystem.PERSISTENT, 0, 
 	function(fileSystem)
@@ -729,7 +733,10 @@ function downtile(smap, szoom, A, B, i, ii, retry)
 			//  theFile.toURI());
 		//	alert(	sPath + tilename);
 fileTransfer.download(tilelink,	sPath + tilename,	function(theFile) {document.getElementById("img_"+i+"-"+ii).src="file:///mnt/sdcard/locage/maps/"+smap+"/"+szoom+"_"+A+"_"+B+".png";
+
 document.getElementById("img_"+i+"-"+ii).alt=smap+"/"+szoom+"_"+A+"_"+B+".png";
+
+
 			theFile.file(
 				function(fileObj) 
 					{
@@ -755,6 +762,7 @@ document.getElementById("img_"+i+"-"+ii).alt=smap+"/"+szoom+"_"+A+"_"+B+".png";
 
  function fail(evt) 
 	{
+		console.log("error with file system");
     console.log(evt.target.error.code);
     }
 </script></body>
