--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Prius Taxi</title>
 
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script type="text/javascript" charset="utf-8" src="io.js"></script>
-	<script type="text/javascript" charset="utf-8" src="func.js"></script>
+  	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>MyTaxi</title>
+
+	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+
+	<script type="text/javascript" charset="utf-8" src="io.js"></script>
+<script type="text/javascript" charset="utf-8" src="func.js"></script>
 	
 
 <script type="text/javascript" charset="utf-8">
 
+document.addEventListener("deviceready", onDeviceReady, false);
 
 var wlon=44.7689831;
 var wlat=41.7089554;
 var MyUser="nouser";
 var MyPass="nopass";
-var MyZoom=3;
+var MyZoom=17;
 
 var MyLat;
 var MyLong;
@@ -25,7 +29,9 @@ var MySpeed;
 var MyAcc;
 var started;
 started=0;
-document.addEventListener("deviceready", onDeviceReady, false);
+
+
+
 
 function onBackKeyDown() 
 	{
@@ -74,6 +80,9 @@ var omousey;
 	
 var sx;
 var sy;
+
+var canacX;
+var canacY;
 var inter='none';
 
 var inpause=0;
@@ -83,12 +92,41 @@ sy=getscreenh();
 var myself=0;
 
 
+var gamehttp;
+if (window.XMLHttpRequest) {gamehttp=new XMLHttpRequest();}
+else if (window.ActiveXObject) {gamehttp=new ActiveXObject('Microsoft.XMLHTTP');}
+else {alert('Your browser does not support XMLHTTP!');}
+gamehttp.onreadystatechange=update_data;
 
+
+var userids = new Array();
+var usernames = new Array();
+var userlongs = new Array();
+var userlats = new Array();
+var useralts = new Array();
+var userspeeds = new Array();
+var userheads = new Array();
+var userlasts = new Array();
+
+
+var cache_ignore=0;
+var cache_ignore_wifi=1;
+
+
+var cur_down_i=0;
+var cur_down_ii=0;
+var down_complete=1;
+var check_complete=1;
+var file_downing=0;
+var LT_finished=0;
 var watchID = null;
 // ------------------------------
 function onDeviceReady() 
 	{
+
+
 	checkConnection();
+
 	document.addEventListener("pause", onPause, false);
 	document.addEventListener("backbutton", onBackKeyDown, false);
 	document.addEventListener("menubutton", onMenuDown, false);
@@ -101,12 +139,14 @@ function onDeviceReady()
 	watchID = navigator.geolocation.watchPosition(onWatchSuccess, onError, opts);
 	document.addEventListener("resume", onResume, false);
 	checkIfFileExists("locdata.txt");
-	if (dataex==0)
-		{WriteData();}	
+
+	if (dataex==0)	{WriteData();}	
 
 	ReadData();
 
-	if (started==0 && MyUser!="nouser")	{Start();}
+	if (started==0)	{
+		Start();
+		}
 	}
 // ------------------------
 
@@ -129,22 +169,6 @@ function MainProg()
 		}
 	}
 
-var gamehttp;
-if (window.XMLHttpRequest) {gamehttp=new XMLHttpRequest();}
-else if (window.ActiveXObject) {gamehttp=new ActiveXObject('Microsoft.XMLHTTP');}
-else {alert('Your browser does not support XMLHTTP!');}
-gamehttp.onreadystatechange=update_data;
-
-
-var userids = new Array();
-var usernames = new Array();
-var userlongs = new Array();
-var userlats = new Array();
-var useralts = new Array();
-var userspeeds = new Array();
-var userheads = new Array();
-var userlasts = new Array();
-
 
 function update_data()
 	{		
@@ -155,11 +179,11 @@ function update_data()
 			{
 			if (mr=="register")		
 				{
-				//alert("Please Register Your User at\n\r http://design.ge/xcom/");
+				//alert("Please Register Your User at\n\r http://design.ge/geotaxi/");
 			//	started=0;
 			//	document.getElementById('mainb').innerHTML="START";
 				Start();
-				alert("please REGISTER at website: www.design.ge/locage");
+				//alert("please REGISTER at website: www.design.ge/mytaxi");
 				}
 			else
 				{
@@ -176,7 +200,7 @@ function update_data()
 
 						if ( document.getElementById("user_"+myid)==null)
 							{
-							document.getElementById("users").innerHTML+="<div id='user_"+myid+"'  style='position:absolute; left:0px; top:0px; color:red; font-size:12px; font-weight:bold;'><div style='position:absolute; left:0px; top:0px; width:3px; height:3px; background-color:red;'></div>&nbsp;&nbsp;"+b[1]+"</div>";
+							document.getElementById("users").innerHTML+="<div id='user_"+myid+"'  style='position:absolute; left:0px; top:0px; color:red; font-size:12px; font-weight:bold;'><div style='position:absolute; left:-16px; top:-16px; width:32px; height:32px;'><img src='taxizm.png'></div></div>"; //&nbsp;&nbsp;"+b[1]+"
 							}
 						userids[i]=myid;
 						usernames[i]=b[1];
@@ -202,11 +226,11 @@ function UpData()
 	{
 	if (MyUser!="nouser")
 		{    
-		url="http://design.ge/xcom/upload.php?uname="+MyUser+"&pass="+MyPass+"&lat="+MyLat+"&long="+MyLong+"&alt="+MyAlt+"&head="+MyHead+"&speed="+MySpeed+"&passive="+inpause;		
+		url="http://design.ge/geotaxi/upload.php?uname="+MyUser+"&pass="+MyPass+"&lat="+MyLat+"&long="+MyLong+"&alt="+MyAlt+"&head="+MyHead+"&speed="+MySpeed+"&passive="+inpause;		
 		}
 	else
 		{
-		url="http://design.ge/xcom/upload.php?passive="+inpause;
+		url="http://design.ge/geotaxi/upload.php?passive="+inpause;
 		}
 //	document.getElementById('erorebi').innerHTML="uname="+MyUser+"&pass="+MyPass+"&lat="+MyLat+"&long="+MyLong+"&alt="+MyAlt+"&head="+MyHead+"&speed="+MySpeed;
 	gamehttp.open('GET',url,true);
@@ -218,15 +242,19 @@ function UpData()
 function Start()
 	{
 	if (started==0)
-		{started=1;  document.getElementById('mainb').innerHTML="STOP"; MainProg();}
+		{started=1;  MainProg();}  // document.getElementById('mainb').innerHTML="STOP";
 	else
-		{started=0;  document.getElementById('mainb').innerHTML="START"; }
+		{started=0;} //  document.getElementById('mainb').innerHTML="START";
 
 	}
 
 function onPause()
 	{
-	if (started==0) {clearWatch();}
+//	if (started==0) 
+		//{
+			started=0;
+	clearWatch();
+	//}
 	WriteData();
 	inpause=1;
 	}
@@ -254,7 +282,7 @@ function onResume()
 	//DrawUsers();
 	}
 
-    
+
 function onSuccess(position) 
 	{
 	var element = document.getElementById('geopos');
@@ -274,10 +302,10 @@ function onSuccess(position)
 	wlon=MyLong;
 	wlat=MyLat;
 
-	if (started==0 && MyUser!="nouser" && MyUser!="")	{Start();}
+	if (started==0 && MyUser!="nouser")	{Start();}
 
 	setmypos();
-	document.getElementById('geopos_short').innerHTML="<table width=100% cellspacing=0><tr><td>Accuracy: "+MyAcc+"</td><td>Altitude: "+MyAlt+"</td></tr></table>";
+//	document.getElementById('geopos_short').innerHTML="<table width=100% cellspacing=0><tr><td>Accuracy: "+MyAcc+"</td><td>Altitude: "+MyAlt+"</td></tr></table>";
 	
     }
 
@@ -330,17 +358,40 @@ function onWatchSuccess(position)
 
 	<div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 		
+
+		<!-- MAIN MAP -->
+
 		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; ' >
-			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; position:relative; ' >
+			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; border:1px solid red;' >
+
 			</div>
 		</div>
 
+		<!-- MOUSE OVER LAYER -->
 		<div id='mouser' style='position:absolute; left:0px;top:0px; width:400px; height:600px;z-index:202;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
 		</div>
 
+
+		<div id='profile_div' style='position:absolute; left:0px; top:0px; width:600px; height:600px; z-index:207; background:URL(semitrans.png); visibility:hidden;'>
+			<table width=100% cellspacing=0 cellpadding=0 height=100% border=1>
+				<tr><td onmouseup='hide_profile();' onclick="hide_profile();" colspan=3></td></tr>
+				<tr><td onmouseup='hide_profile();' onclick="hide_profile();"></td>
+				<td>
+					<img src='http://design.ge/geotaxi/taxicar.jpg' width=100px><br>
+					&#4315;&#4304;&#4316;&#4325;&#4304;&#4316;&#4312;&#4321;&#32;&#4315;&#4317;&#4307;&#4308;&#4314;&#4312;: Mercedes<br>
+					მანქანის ფერი: მწვანე<br>
+					მძღოლი: ანდრო შველიძე<br>
+					<a href='Javascript: call_taxi()'>გამოძახება</a>
+				</td>
+				<td onmouseup='hide_profile();' onclick="hide_profile();"></td></tr>
+				<tr><td onmouseup='hide_profile();' onclick="hide_profile();" colspan=3></td></tr>
+				</table>
+		</div>
+		
 		<div id="geopos_short" style='width:100%; position:absolute; left:0px; top:0px; z-index:100; background-color:black; filter: alpha(opacity=50);
 			-moz-opacity: 0.5; -khtml-opacity: 0.5;  opacity: 0.5;'>Finding geolocation...</div>
-		<a href='Javascript: Start();' id='mainb' style='position:absolute; left:25px; top:25px; background-color:green; color:white; font-weight:bold; width:200px; display:block; padding:5px; z-index:301; text-align:center;' >START</a>
+
+		<!--<a href='Javascript: Start();' id='mainb' style='position:absolute; left:25px; top:25px; background-color:green; color:white; font-weight:bold; width:200px; display:block; padding:5px; z-index:301; text-align:center;' >START</a>-->
 
 
 	
@@ -400,8 +451,6 @@ function onWatchSuccess(position)
 
 <script>
 
-var cache_ignore=0;
-var cache_ignore_wifi=1;
 
 function cignore()
 	{
@@ -441,7 +490,9 @@ var curwindow=0;
 
 function show_settings()
 	{
+
 	checkConnection();
+
 	curwindow=1;
 	document.getElementById("fanjara").style.visibility="hidden";
 	document.getElementById("settings_sheet").style.visibility="visible";
@@ -460,6 +511,8 @@ function stopScrolling( touchEvent )
 			{ touchEvent.preventDefault(); }
 document.body.addEventListener( 'touchmove' , stopScrolling , false );
 var mcl="orange";
+
+
 function DrawUsers()
 	{
 
@@ -481,6 +534,8 @@ function DrawUsers()
 		document.getElementById("user_"+myid).style.color=mcl;
 		document.getElementById("user_"+myid).style.left=difx+"px";
 		document.getElementById("user_"+myid).style.top=dify+"px";
+		document.getElementById("user_"+myid).innerHTML="<img src='taxizm.png' width='32px' height='32px' style='position:absolute; left:-16px; top:-16px;'>";//"X: "+difx+" Y: "+dify;
+
 		}
 	}
 
@@ -508,7 +563,8 @@ function mdown(event)
 	omousex=event.touches[0].pageX; omousey=event.touches[0].pageY;
 	finx=0; sfiny=0;
 	but1=1;
-//	document.getElementById("mainb").innerHTML="Click "+omousex;
+
+//	document.getElementById("mainb").innerHTML="X: "+omousex+" Y: "+omousey;
 	}
 
 var biji = new Array();
@@ -537,12 +593,14 @@ function getmousecoord(event)
 
 	if (but1==1)
 		{
-		mousex=event.touches[0].pageX; mousey=event.touches[0].pageY;
+		mousex=event.touches[0].pageX; 
+		mousey=event.touches[0].pageY;
 	
 		wlon=wlon+((omousex-mousex)/biji[MyZoom]);
 		wlat=wlat-((omousey-mousey)/(biji[MyZoom]*1.3));
 		omousex=mousex;
 		omousey=mousey;
+
 		//
 		setmypos();
 		DrawUsers();
@@ -554,6 +612,7 @@ function mup()
 	{
 	but1=0;
 	sfinx=0; sfiny=0;
+	check_user_click();
 	//document.getElementById("mainb").innerHTML="Up";
 	}
 
@@ -581,12 +640,17 @@ var myhpx=(myh-1)*256;
 
 document.getElementById("mainw").style.width=mywpx+"px";
 document.getElementById("mainw").style.height=myhpx+"px";
+console.log(" x: "+mywpx+ " Y: "+myhpx);
 document.getElementById("map").style.width=mywpx+"px";
 document.getElementById("map").style.height=myhpx+"px";
 document.getElementById("mainw").style.left=(-(mywpx-(sx))/2)+"px";
 document.getElementById("mainw").style.top=(-(myhpx-(sy))/2)+"px";
 
-document.getElementById("mainb").style.left=((sx-200)/2)+"px";
+canacX=(-(mywpx-(sx))/2);
+canacY=(-(myhpx-(sy))/2);
+
+console.log(" x: "+(-(mywpx-(sx))/2)+ " Y: "+(-(myhpx-(sy))/2));
+//document.getElementById("mainb").style.left=((sx-200)/2)+"px";
 
 
 function zoomme(sait)
@@ -636,10 +700,13 @@ for (i=0;i<myw ; i++)
 		mymap.innerHTML+="<img id='img_"+i+"-"+ii+"' style='position:absolute; left:"+(i*256-128)+"px; top:"+(ii*256-128)+"px; width:256px; height:256px;'>";
 		}
 	}
-
+//mymap.innerHTML+="				<div style='position:absolute; background-color:red; width:5px; height:5px; left:300px; top:300px;'></div>";
 var oxt=0;
 var oyt=0;
 var tilef=0;
+
+var kartX;
+var kartY;
 
 function setmypos()
 	{
@@ -655,42 +722,150 @@ function setmypos()
 	
 	var difx=128-(x-xtile)*256;
 	var dify=128-(y-ytile)*256;
+	kartX=difx;
+	kartY=dify;
 
 	document.getElementById("map").style.left=difx+"px";
 	document.getElementById("map").style.top=dify+"px";
-
+	document.getElementById('geopos_short').innerHTML="X: "+difx+" Y: "+dify;
 	if (xtile!=oxt || oyt!=ytile)
 		{
-		for (i=0;i<myw ; i++)
-			{
-			curx=i-(myw-1)/2;
-			for (ii=0;ii<myh ;ii++ )
-				{
-				cury=ii-(myh-1)/2;
-			//	alert("checking: "+curmap+"_"+MyZoom+"_"+(xtile+curx)+"_"+(ytile+cury)+".png");
-				mytile=curmap+"/"+MyZoom+"_"+(xtile+curx)+"_"+(ytile+cury)+".png";
-				checktile(mytile);
-				//if (tilef==0 || cache_ignore==1 || (cache_ignore_wifi==1 && inter=="Wifi"))
-//					{
-			//		if (tilef==1)	{document.getElementById("img_"+i+"-"+ii).src="file:///mnt/sdcard/locage/maps/"+mytile;	}
-					downtile(curmap, MyZoom, (xtile+curx), (ytile+cury), i, ii,1);
-					console.log("down tile, map "+curmap+", zoom: "+MyZoom+", X: "+ (xtile+curx)+", y: "+ (ytile+cury)+" i:"+i+" ii: "+ii);
-//					}
-//				else
-//					{
-//					document.getElementById("img_"+i+"-"+ii).src="file:///mnt/sdcard/locage/maps/"+mytile;
-//					document.getElementById("img_"+i+"-"+ii).alt=mytile;
-//					}
-				}
-			}
 		oxt=xtile;
 		oyt=ytile;
+		cur_down_i=0;
+		cur_down_ii=-1;
+		down_complete=1;
+		check_complete=1;
+		file_downing=1;
+		LT_finished=0;
+		loadtiles();	
 		DrawHomePos();
 		}
 	}
 
+function check_user_click()
+	{
+	console.log((omousex-canacX-kartX) + " and " + (omousey-canacY-kartY));
+	for (i=0;i<userids.length ;i++ )
+		{
+		myid=userids[i];
+
+		var x=long2pixel(userlongs[i], MyZoom);
+		var y=lat2pixel(userlats[i], MyZoom);
+	
+		var difx=Math.floor((x-xtile)*256);
+		var dify=Math.floor((y-ytile)*256);
+		difx=(256*(myw-1)/2)+difx-128;
+		dify=(256*(myh-1)/2)+dify-128;
+		if ( (difx-16)<(omousex-canacX-kartX) && (omousex-canacX-kartX)<(difx+16) &&  (dify-16)<(omousey-canacY-kartY) && (omousey-canacY-kartY)<(dify+16) )
+			{
+			show_profile(i);
+			}
+		}
+	}
+
+function hide_profile()
+	{
+	document.getElementById("profile_div").style.visibility="hidden";
+	document.getElementById("mouser").style.visibility="visible";
+	curtaxi=-1;
+	}
+var curtaxi=-1;
+
+function show_profile(tid)
+	{
+	var curtaxi=tid;
+	document.getElementById("profile_div").style.visibility="visible";
+	document.getElementById("mouser").style.visibility="hidden";
+	}
+
+function call_taxi()
+	{
+	if (curtaxi>-1)
+		{
+		alert("gamozaxeba");
+		}
+	}
+
+function loadtiles()
+	{
+	if (down_complete==1 && check_complete==1)
+		{
+		var A;
+
+		if (cur_down_ii>=(myh-1))
+			{
+			cur_down_ii=-1; cur_down_i++;
+			}
+		curx=cur_down_i-(myw-1)/2;
+	
+		if (cur_down_i<myw)
+			{
+			cur_down_ii++;
+			
+			cury=cur_down_ii-(myh-1)/2;
+		//	alert("checking: "+curmap+"_"+MyZoom+"_"+(xtile+curx)+"_"+(ytile+cury)+".png");
+			
+			A=(xtile+curx);	if (A<0) {A=0;}
+			mytile=curmap+"/"+MyZoom+"_"+A+"_"+(ytile+cury)+".png";
+
+			tilef=-1;
+			check_complete=0;down_complete=0;
+			checktile3(mytile);
+
+			}
+		else
+			{
+			// cikli dasrulda
+			LT_finished=1;
+			console.log("-------- dasrulda ----------");
+
+			
+			DrawHomePos();
+			}
+		}
+	else if (check_complete==1)
+		{
+		curx=cur_down_i-(myw-1)/2; cury=cur_down_ii-(myh-1)/2;
+		A=(xtile+curx);	if (A<0) {A=0;}
+		mytile=curmap+"/"+MyZoom+"_"+A+"_"+(ytile+cury)+".png";
+
+		if (tilef==0 || cache_ignore==1 || (cache_ignore_wifi==1 && inter=="Wifi"))
+			{
+		//	if (file_downing==1)
+		//		{
+				file_downing=0;
+				downtile(curmap, MyZoom, (xtile+curx), (ytile+cury), cur_down_i, cur_down_ii,1);
+				down_complete=1;
+				file_downing=1;
+		//		}
+			}
+		else
+			{
+			document.getElementById("img_"+cur_down_i+"-"+cur_down_ii).src="file:///storage/emulated/0/mytaxi/maps/"+mytile;
+			document.getElementById("img_"+cur_down_i+"-"+cur_down_ii).alt=mytile;
+			down_complete=1;
+			file_downing=1;
+			
+			DrawHomePos();
+			}
+		}
+		
+	if (LT_finished==0)
+		{
+		setTimeout("loadtiles();",1);
+		}
+
+	}
+
+
 function downtile(smap, szoom, A, B, i, ii, retry)
 	{
+	if (A<0)
+		{A=0;}
+	if (B<0)
+		{B=0;}
+
 	if (smap==1)
 		{tilelink="http://tile.openstreetmap.org/"+szoom+"/"+A+"/"+B+".png";			}
 	else if (smap==2)
@@ -714,20 +889,55 @@ function downtile(smap, szoom, A, B, i, ii, retry)
 		{tilelink="http://tile.stamen.com/watercolor/"+szoom+"/"+A+"/"+B+".png";			}
 	else if (smap==10)
 		{tilelink="http://tile.stamen.com/toner/"+szoom+"/"+A+"/"+B+".png";			}	
-//alert("downloading: "+tilelink);
 	tilename=smap+"/"+szoom+"_"+A+"_"+B+".png";
-	console.log("tilename: "+tilename);
-	console.log("tilelink: "+tilelink);
 
-	document.getElementById("img_"+i+"-"+ii).src=tilelink;
-
-	
+	window.requestFileSystem(LocalFileSystem.PERSISTENT, 0, 
+	function(fileSystem)
+		{
+		
+		fileSystem.root.getFile("mytaxi/maps/dummy.html", {create: true, exclusive: false}, 
+		function gotFileEntry(fileEntry) 
+			{
+			var sPath =fileEntry.fullPath.replace("dummy.html","");
+			var fileTransfer = new FileTransfer();
+			
+			console.log("downloading: mytaxi/maps/" + tilename);
+			fileTransfer.download(tilelink,	fileSystem.root.toURL() + "mytaxi/maps/" + tilename,	function(theFile) {
+				theFile.file(
+				function(fileObj) 
+					{
+					if (fileObj.size<9 && retry<5)
+						{downtile(smap, szoom, A, B, i, ii, retry+1);
+						console.log("file size too small: "+ smap+"/"+ szoom+"_"+ A+"_"+ B+".png "+ i+ " : " +ii); 
+						} 
+					else
+						{
+						console.log("carmateba:  "+ smap+"/"+ szoom+"_"+ A+"_"+ B+".png "+ i+ " : " +ii); 
+						document.getElementById("img_"+i+"-"+ii).src="file:///storage/emulated/0/mytaxi/maps/"+smap+"/"+szoom+"_"+A+"_"+B+".png";
+//						down_complete=1;file_downing=1;
+						}
+					}
+					);
+				DrawHomePos();
+				},	function(error) {
+				console.log("download error source " + error.source);
+                console.log("download error target " + error.target);
+				console.log("upload error code: " + error.code);
+				if (retry<4)
+					{
+					console.log("retring: "+tilename+" number: "+retry);
+					downtile(smap, szoom, A, B, i, ii, retry+1);
+					}
+				else {//down_complete=1;file_downing=1;
+						console.log("sheveshvi: "+tilename+" number: "+retry);}
+				});
+			}, fail);
+		}, fail);	
 	}
 
- function fail(evt) 
+ function fail(error) 
 	{
-		console.log("error with file system");
-    console.log(evt.target.error.code);
+    console.log(error.code);
     }
 </script></body>
 </html>
