--- a/index.html
+++ b/index.html
@@ -396,8 +396,7 @@ function onWatchSuccess(position)
 
 	
 
-		<div id="bottom_menu" style='width:100%; position:fixed; bottom:0px; left:0px; height:50px; z-index:204; background-color:black; filter: alpha(opacity=50);
-			-moz-opacity: 0.5; -khtml-opacity: 0.5;  opacity: 0.5;'>
+		<div id="bottom_menu" style='width:100%; position:fixed; bottom:0px; left:0px; height:50px; z-index:204; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
 			
 			<table width=100% cellpadding=0 cellspacing=0>
 			<tr><Td align=left><a href='Javascript:zoomme(1);' style='float:left; font-size:30px; margin:5px;'><img src='zoomin.png'></a></td>
