--- a/index.html
+++ b/index.html
@@ -396,19 +396,22 @@ function onWatchSuccess(position)
 
 	
 
-		<div id="bottom_menu" style='width:100%; position:fixed; bottom:0px; left:0px; height:50px; z-index:204; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
-			
-			<table width=100% cellpadding=0 cellspacing=0>
-			<tr><Td align=left><a href='Javascript:zoomme(1);' style='float:left; font-size:30px; margin:5px;'><img src='zoomin.png'></a></td>
-			<td align=center><a href='Javascript: setme();' style='margin:5px; ' ><img id='cbut' src='centeroff.png'></a></td>
-			<Td align=center><a href='Javascript: show_settings();' style='margin:5px;'><img src='settings.png'></a></td>
-			<td align=right><a href='Javascript:zoomme(-1);' style='float:right; margin:5px;   '><img src='zoomout.png'></a></td>
-			</table>
+		<div id="bottom_menu" style='width:100%; position:fixed; bottom:0px; left:0px; height:28px; z-index:204; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
+<table width=100% cellpadding=0 cellspacing=0>
+<tr><Td align=left width=33%><img src='phone.png'></td><td align=center><img src='but_call.png'></td><td width=33%></td></table>
+
 
 		</div>
 
 	</div>
-	   
+
+	   			<!--<table width=100% cellpadding=0 cellspacing=0>
+			<tr><Td align=left><a href='Javascript:zoomme(1);' style='float:left; font-size:30px; margin:5px;'><img src='zoomin.png'></a></td>
+			<td align=center><a href='Javascript: setme();' style='margin:5px; ' ><img id='cbut' src='centeroff.png'></a></td>
+			<Td align=center><a href='Javascript: show_settings();' style='margin:5px;'><img src='settings.png'></a></td>
+			<td align=right><a href='Javascript:zoomme(-1);' style='float:right; margin:5px;   '><img src='zoomout.png'></a></td>
+			</table>-->
+
 
 
 
