--- a/index.html
+++ b/index.html
@@ -394,11 +394,12 @@ function onWatchSuccess(position)
 		<!--<a href='Javascript: Start();' id='mainb' style='position:absolute; left:25px; top:25px; background-color:green; color:white; font-weight:bold; width:200px; display:block; padding:5px; z-index:301; text-align:center;' >START</a>-->
 
 
+<div id='call_but'  style='position:fixed; bottom:0px; left:85px; height:100px; width:210px; z-index:210;'><img src='but_call.png'></div>
 	
 
 		<div id="bottom_menu" style='width:100%; position:fixed; bottom:0px; left:0px; height:28px; z-index:204; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
-<table width=100% cellpadding=0 cellspacing=0>
-<tr><Td align=left width=33%><img src='phone.png'></td><td align=center><img src='but_call.png'></td><td width=33%></td></table>
+
+<img src='phone.png'>
 
 
 		</div>
