--- a/index.html
+++ b/index.html
@@ -358,10 +358,15 @@ function onWatchSuccess(position)
 
 	<div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 		
+<div id='mainw' style='position:absolute; left:0px; top:0px; width:100%; height:50px; background-color:white; ' >
+<div style='float:left;'><img src='but_info.png'></div>
+<div style='float:right;'><img src='but_register.png'></div>
 
+
+</div>
 		<!-- MAIN MAP -->
 
-		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; ' >
+		<div id='mainw' style='position:absolute; left:0px; top:50px; width:600px; height:600px; border:1px solid red; ' >
 			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; border:1px solid red;' >
 
 			</div>
@@ -394,10 +399,10 @@ function onWatchSuccess(position)
 		<!--<a href='Javascript: Start();' id='mainb' style='position:absolute; left:25px; top:25px; background-color:green; color:white; font-weight:bold; width:200px; display:block; padding:5px; z-index:301; text-align:center;' >START</a>-->
 
 
-<div id='call_but'  style='position:fixed; bottom:0px; left:85px; height:100px; width:210px; z-index:210;'><img src='but_call.png'></div>
+	<div id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:210;'><img src='but_call.png'></div>
 	
 
-		<div id="bottom_menu" style='width:100%; position:fixed; bottom:0px; left:0px; height:28px; z-index:204; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
+		<div id="bottom_menu" style='width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:204; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
 
 <img src='phone.png'>
 
