--- a/index.html
+++ b/index.html
@@ -359,19 +359,19 @@ function onWatchSuccess(position)
 	<div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 		
 <div id='mainw' style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; ' >
-<div style='float:left;'><img src='but_info.png'></div>
-<div style='float:right;'><img src='but_register.png'></div>
+	<div style='float:left;'><img src='but_info.png'></div>
+	<div style='float:right;'><img src='but_register.png'></div>
 
 
 </div>
 		<!-- MAIN MAP -->
-
-		<div id='mainw' style='position:fixed; left:0px; top:50px; width:600px; height:600px; border:1px solid red; ' >
+<div id='charcho' style='position:fixed; left:0px; top:50px; width:365px; height:600px; border:1px solid red; ' >
+		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; ' >
 			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; border:1px solid red;' >
 
 			</div>
 		</div>
-
+</div>
 		<!-- MOUSE OVER LAYER -->
 		<div id='mouser' style='position:absolute; left:0px;top:0px; width:400px; height:600px;z-index:202;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
 		</div>
