--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ function onWatchSuccess(position)
 
 	<div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 		
-<div id='mainw' style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; ' >
+<div id='mainw' style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; z-index:211; ' >
 	<div style='float:left;'><img src='but_info.png'></div>
 	<div style='float:right;'><img src='but_register.png'></div>
 
