--- a/index.html
+++ b/index.html
@@ -358,14 +358,14 @@ function onWatchSuccess(position)
 
 	<div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 		
-<div id='mainw' style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; z-index:211; ' >
+<div  style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; z-index:211; ' >
 	<div style='float:left;'><img src='but_info.png'></div>
 	<div style='float:right;'><img src='but_register.png'></div>
 
 
 </div>
 		<!-- MAIN MAP -->
-<div id='charcho' style='position:fixed; left:0px; top:50px; width:365px; height:600px; border:1px solid red; ' >
+<div id='charcho' style='position:fixed; left:0px; top:50px; width:365px; height:600px; border:1px solid red; z-index:1;' >
 		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; ' >
 			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; border:1px solid red;' >
 
