--- a/index.html
+++ b/index.html
@@ -754,8 +754,13 @@ var kartY;
 
 function setmypos()
 	{
+ 
+	console.log("set my pos, zoom: "+MyZoom);
 
-	console.log("set my pos");
+	if (MyZoom>18 || MyZoom<1)
+		{
+			MyZoom=17;
+		}
 
 	var lon_deg=wlon; 
 	var lat_deg=wlat; 
