--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ console.log("on watch success");
 		
 <div  style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; z-index:211; ' >
 	<div style='float:left;'><img src='but_info.png'></div>
-	<div id='infodiv' style='float:right; width:150px; border:1px solid red; color:Black;'></div>
+	<div id='infodiv' style='float:right; width:250px; border:1px solid red; color:Black;'></div>
 <!--	<div style='float:right;'><img src='but_register.png'></div>-->
 
 
@@ -392,7 +392,7 @@ console.log("on watch success");
 		</div>
 </div>
 		<!-- MOUSE OVER LAYER -->
-		<div id='mouser' style='position:absolute; left:0px;top:0px; width:400px; height:600px;z-index:202;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
+		<div id='mouser' style='position:absolute; left:0px;top:0px; width:400px; height:600px; z-index:202; border:1px solid red;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
 		</div>
 
 
