--- a/index.html
+++ b/index.html
@@ -392,11 +392,11 @@ console.log("on watch success");
 		</div>
 </div>
 		<!-- MOUSE OVER LAYER -->
-		<div id='mouser' style='position:absolute; left:0px;top:0px; width:400px; height:600px; z-index:202; border:1px solid red;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
+		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:600px; z-index:250; border:1px solid red;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
 		</div>
 
 
-		<div id='profile_div' style='position:absolute; left:0px; top:0px; width:600px; height:600px; z-index:207; background:URL(semitrans.png); visibility:hidden;'>
+		<!--<div id='profile_div' style='position:absolute; left:0px; top:0px; width:600px; height:600px; z-index:252; background:URL(semitrans.png); visibility:hidden;'>
 			<table width=100% cellspacing=0 cellpadding=0 height=100% border=1>
 				<tr><td onmouseup='hide_profile();' onclick="hide_profile();" colspan=3></td></tr>
 				<tr><td onmouseup='hide_profile();' onclick="hide_profile();"></td>
@@ -410,26 +410,27 @@ console.log("on watch success");
 				<td onmouseup='hide_profile();' onclick="hide_profile();"></td></tr>
 				<tr><td onmouseup='hide_profile();' onclick="hide_profile();" colspan=3></td></tr>
 				</table>
-		</div>
+		</div>-->
 		
-		<div id="geopos_short" style='width:100%; position:absolute; left:0px; top:0px; z-index:100; background-color:black; filter: alpha(opacity=50);
+		<div id="geopos_short" style='width:100%; position:absolute; left:0px; top:0px; z-index:220; background-color:black; filter: alpha(opacity=50);
 			-moz-opacity: 0.5; -khtml-opacity: 0.5;  opacity: 0.5;'>Finding geolocation...</div>
 
 		<!--<a href='Javascript: Start();' id='mainb' style='position:absolute; left:25px; top:25px; background-color:green; color:white; font-weight:bold; width:200px; display:block; padding:5px; z-index:301; text-align:center;' >START</a>-->
 
 
-	<div id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:210;'><img src='but_call.png'></div>
+	<div id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:251; border:1px solid red;'><img src='but_call.png'></div>
 	
 
-		<div id="bottom_menu" style='width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:204; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
-
-<img src='phone.png'>
+		<div id="bottom_menu" style='border:1px solid green; width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:253; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
 <table width=100% cellpadding=0 cellspacing=0>
 			<tr><Td align=left><a href='Javascript:zoomme(1);' style='float:left; font-size:30px; margin:5px;'><img src='zoomin.png'></a></td>
 			<td align=center><a href='Javascript: setme();' style='margin:5px; ' ><img id='cbut' src='centeroff.png'></a></td>
 			<Td align=center><a href='Javascript: show_settings();' style='margin:5px;'><img src='settings.png'></a></td>
 			<td align=right><a href='Javascript:zoomme(-1);' style='float:right; margin:5px;   '><img src='zoomout.png'></a></td>
 			</table>
+
+
+<img src='phone.png'>
 
 		</div>
 
