--- a/index.html
+++ b/index.html
@@ -418,16 +418,16 @@ console.log("on watch success");
 		<!--<a href='Javascript: Start();' id='mainb' style='position:absolute; left:25px; top:25px; background-color:green; color:white; font-weight:bold; width:200px; display:block; padding:5px; z-index:301; text-align:center;' >START</a>-->
 
 
-	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:251; border:1px solid red;'><img src='but_call.png'></div>
+	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; border:1px solid red;'><img src='but_call.png'></div>
 	
-<a href='Javascript:zoomme(1);' style='position:fixed; bottom:80px; right:5px; margin:5px;'><img src='zoomin.png'></a>
-<a href='Javascript:zoomme(-1);'style='position:fixed; bottom:45px; right:5px; margin:5px;'><img src='zoomout.png'></a>
-<a href='Javascript: setme();' style='position:fixed; bottom:125px; right:5px; margin:5px; ' ><img id='cbut' src='centeroff.png'></a>
-<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; ' ><img src='settings.png'></a>
+<a href='Javascript:zoomme(1);' style='position:fixed; bottom:80px; right:5px; margin:5px; z-index:252;'><img src='zoomin.png'></a>
+<a href='Javascript:zoomme(-1);'style='position:fixed; bottom:45px; right:5px; margin:5px; z-index:252;'><img src='zoomout.png'></a>
+<a href='Javascript: setme();' style='position:fixed; bottom:125px; right:5px; margin:5px; z-index:252; ' ><img id='cbut' src='centeroff.png'></a>
+<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;' ><img src='settings.png'></a>
 
 
 
-		<div id="bottom_menu" style='border:1px solid green; width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:253; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
+		<div id="bottom_menu" style='border:1px solid green; width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
 			<img src='phone.png'>
 		</div>
 
