--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ function onDeviceReady()
 		ReadData();
 		}
 	
-	if (dataex==0 || myid==0s)	
+	if (dataex==0 || myid==0)	
 		{
 		
 		myid=Math.floor(Math.random()*10000000);
