--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ var updatacounter=0;
 var uplimit=5;
 function MainProg()
 	{
-	//console.log("main prog");
+	console.log("main prog");
 	if (started==1)
 		{	
 		updatacounter++;
