--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ function onWatchSuccess(position)
 				<div id='users' style='position:absolute; left:0px; top:0px;  z-index:101; '>
 					<div id='homepos' style='position:absolute; left:0px; top:0px;  background-color:green; width:7px; height:7px; z-index:102;'></div>
 					<div id='taxibox'  style='position:absolute; left:0px; top:0px; color:red; font-size:12px; width:32px; height:32px;  z-index:103;'>
-						<div style='position:absolute; left:-16px; top:-16px; width:32px; height:32px; z-index:104; '>
+						<div style='position:absolute; left:-16px; top:-16px; width:32px; height:32px; z-index:104; border:1px solid red;'>
 						<img src='taxizm.png'>
 						</div>
 					</div>
@@ -506,6 +506,7 @@ if (newstat!=mystatus)
 		{
 		uplimit=1;
 		document.getElementById("call_but").style.display="none";
+		myself=1;
 		}
 
 	else if (mystatus==0)
@@ -600,7 +601,7 @@ function DrawUsers()
 		document.getElementById("taxibox").style.top=dify+"px";
 		document.getElementById("taxibox").style.visibility="visible";
 
-
+		console.log("draw taxi");
 		}
 	}
 
