--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@ function update_data()
 						{
 						taxilong=parseFloat(b[0]);
 						taxilat=parseFloat(b[1]);
+						console.log("taxilat: "+b[1]+" / "+taxilat);
 						}
 					}
 				if (inpause==0)	{DrawUsers();}
