--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@ function onWatchSuccess(position)
 
 				<div id='users' style='position:absolute; left:0px; top:0px;  z-index:101; '>
 					<div id='homepos' style='position:absolute; left:0px; top:0px;  background-color:green; width:7px; height:7px; z-index:102;'></div>
-					<div id='taxibox'  style='border:1px solid red; position:absolute; left:0px; top:0px; color:red; font-size:12px; width:32px; height:32px;  z-index:103;'>
-						<div style='position:absolute; left:-16px; top:-16px; width:32px; height:32px; z-index:104; border:1px solid red;'>
+					<div id='taxibox'  style=' position:absolute; left:0px; top:0px; color:red; font-size:12px; width:32px; height:32px;  z-index:103;'>
+						<div style='position:absolute; left:-16px; top:-16px; width:32px; height:32px; z-index:104;'>
 						<img src='taxizm.png'>
 						</div>
 					</div>
