--- a/index.html
+++ b/index.html
@@ -235,6 +235,26 @@ function update_data()
 						
 						}
 					}
+				else if (a[0]=="taxi_waiting")
+					{
+					change_status(4);
+					b=a[1].split(";");
+					if (b[0]!="")
+						{
+						taxilong=parseFloat(b[0]);
+						taxilat=parseFloat(b[1]);
+						}
+					}
+				else if (a[0]=="you_moving")
+					{
+					change_status(5);
+					b=a[1].split(";");
+					if (b[0]!="")
+						{
+						taxilong=parseFloat(b[0]);
+						taxilat=parseFloat(b[1]);
+						}
+					}
 				if (inpause==0)	{DrawUsers();}
 
 
@@ -422,7 +442,7 @@ function onWatchSuccess(position)
 
 
 
-	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:252; background-color:green; color:white; '><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center;'>ჩამოვდივარ</a></center></div>
+	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:252; background-color:yellow; color:white; '><br><br><br><br><br><br><br><br><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; border:1px solid gray;'>ჩამოვდივარ</a></center></div>
 	
 		<!-- MOUSE OVER LAYER -->
 		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:620px; z-index:250; border:1px solid red;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
@@ -462,6 +482,7 @@ function onWatchSuccess(position)
 
 		<div id="bottom_menu" style='border:1px solid green; width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
 			<img src='phone.png'>
+			<div id='info_text' style='color:white; padding:5px;'></div>
 		</div>
 
 	</div>
@@ -522,6 +543,7 @@ if (newstat!=mystatus)
 	if (mystatus==1)
 		{
 		uplimit=1;
+		document.getelementById("info_text").innerHTML="ტაქსის ძიება";
 		document.getElementById("call_but").style.display="none";
 		document.getElementById("arrived_screen").style.display="none";
 		}
@@ -529,13 +551,30 @@ if (newstat!=mystatus)
 		{
 		uplimit=1;
 		document.getElementById("call_but").style.display="none";
+		document.getelementById("info_text").innerHTML="ტაქსი მოდის";
 		myself=1;
 		}
-	if (mystatus==3)
+	else if (mystatus==3)
 		{
 		uplimit=1;
 		document.getElementById("call_but").style.display="none";
 		document.getElementById("arrived_screen").style.display="inline";
+		myself=1;
+		}
+	else if (mystatus==4)
+		{
+		uplimit=1;
+		document.getElementById("call_but").style.display="none";
+		document.getElementById("arrived_screen").style.display="none";
+		document.getelementById("info_text").innerHTML="ტაქსი გელოდებათ";
+		myself=1;
+		}
+	else if (mystatus==5)
+		{
+		uplimit=5;
+		document.getElementById("call_but").style.display="none";
+		document.getElementById("arrived_screen").style.display="none";
+		document.getelementById("info_text").innerHTML="თქვენ მოძრაობთ";
 		myself=1;
 		}
 
@@ -548,6 +587,22 @@ if (newstat!=mystatus)
 	}
 
 		
+}
+
+function chamovdivar()
+{
+if (MyUser!="nouser")
+		{    
+		url="http://design.ge/geotaxi/chamovdivar.php?uname="+MyUser+"&pass="+MyPass+"&lat="+MyLat+"&long="+MyLong+"&unique="+myid;		
+		}
+	else
+		{
+		url="http://design.ge/geotaxi/chamovdivar.php?lat="+MyLat+"&long="+MyLong+"&unique="+myid;
+		}
+	console.log("taxi chamovdivar: "+url);
+	gamehttp.open('GET',url,true);
+	gamehttp.send(null);
+
 }
 
 function cignore()
