--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ function onWatchSuccess(position)
 
 		<div id="bottom_menu" style='border:1px solid green; width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
 			<img src='phone.png'>
-			<div id='info_text' style='color:white; padding:5px;'></div>
+			<div id='info_text' style=' float:right; color:white; padding:5px; border:1px solid red;'></div>
 		</div>
 
 	</div>
