--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ function onWatchSuccess(position)
 
 		<div id="bottom_menu" style='border:1px solid green; width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
 			<img src='phone.png'>
-			<div id='info_text' style=' float:right; color:white; padding:5px; border:1px solid red;'></div>
+			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; border:1px solid red;'></div>
 		</div>
 
 	</div>
@@ -543,7 +543,7 @@ if (newstat!=mystatus)
 	if (mystatus==1)
 		{
 		uplimit=1;
-		document.getelementById("info_text").innerHTML="ტაქსის ძიება";
+		document.getElementById("info_text").innerHTML="ტაქსის ძიება";
 		document.getElementById("call_but").style.display="none";
 		document.getElementById("arrived_screen").style.display="none";
 		}
@@ -551,7 +551,7 @@ if (newstat!=mystatus)
 		{
 		uplimit=1;
 		document.getElementById("call_but").style.display="none";
-		document.getelementById("info_text").innerHTML="ტაქსი მოდის";
+		document.getElementById("info_text").innerHTML="ტაქსი მოდის";
 		myself=1;
 		}
 	else if (mystatus==3)
@@ -566,7 +566,7 @@ if (newstat!=mystatus)
 		uplimit=1;
 		document.getElementById("call_but").style.display="none";
 		document.getElementById("arrived_screen").style.display="none";
-		document.getelementById("info_text").innerHTML="ტაქსი გელოდებათ";
+		document.getElementById("info_text").innerHTML="ტაქსი გელოდებათ";
 		myself=1;
 		}
 	else if (mystatus==5)
@@ -574,7 +574,7 @@ if (newstat!=mystatus)
 		uplimit=5;
 		document.getElementById("call_but").style.display="none";
 		document.getElementById("arrived_screen").style.display="none";
-		document.getelementById("info_text").innerHTML="თქვენ მოძრაობთ";
+		document.getElementById("info_text").innerHTML="თქვენ მოძრაობთ";
 		myself=1;
 		}
 
