--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ function onWatchSuccess(position)
 	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:black; color:white; '><br><br><br><br><br><br><br><br><br><br><br><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; border:1px solid gray;'>ჩამოვდივარ</a></center></div>
 	
 
-<div id='GPS_search_screen'  style='display:inline; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:301; background-color:black; color:white; '><br><br><br><br><br><br><br><br><br><br><br><center>... მიმდინარეობს თქვენი ლოკაციის დადგენა ...</center></div>
+<div id='GPS_search_screen'  style='display:inline; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:301; background-color:black; color:white; '><br><br><br><br><br><br><br><br><br><center> <img src='taxi.png'><br><br>... მიმდინარეობს თქვენი ლოკაციის დადგენა ...</center></div>
 	
 
 		<!-- MOUSE OVER LAYER -->
